<resources>
    <string name="app_name">NetworkAlbumClient</string>
    <!--登录界面-->
    <string name="ui_login_label_account">账号</string>
    <string name="ui_login_input_account_tip">请输入账号</string>
    <string name="ui_login_label_password">密码</string>
    <string name="ui_login_input_password_tip">请输入密码</string>
    <string name="ui_login_btn">登录</string>

    <!-- 注册页面-->
    <string name="ui_register_label_account">账号</string>
    <string name="ui_register_input_account_tip">请输入账号</string>
    <string name="ui_register_label_password">密码</string>
    <string name="ui_register_input_password_tip">请输入密码</string>
    <string name="ui_register_btn">注册</string>

    <!--相册显示页面-->
    <string name="ui_album_delete">删除</string>
    <string name="testTime">2019–10–11 12:11:00</string>
    <string name="testLabelName">相册名，测试，测试，测试。。。</string>
    <string name="create_album">新建相册</string>
    <string name="create_album_name">添加相册名称</string>
    <string name="create_album_desc">添加相册描述</string>
    <string name="create_album_btn">完成创建</string>
    <!--图片显示页面-->
    <string name="choose_from_camera">相机拍摄</string>
    <string name="choose_from_DCIM">从相册选取</string>

    <string name="save_picture">保存图片</string>
    <string name="save_picture_failed">保存失败</string>
    <string name="save_picture_success">图片成功保存至%s目录</string>

    <string name="share_picture">分享图片</string>
    <string name="share">来自网络相册的分享</string>
    <!--用户信息-->
    <string name="modify_user_info_btn">修改</string>
    <string name="user_nickname_label">昵称</string>
    <string name="user_phone_label">电话</string>
    <string name="user_gender_label">性别</string>
    <string name="user_qq_label">QQ</string>


</resources>
