<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_register_label_account" />

    <EditText
        android:id="@+id/register_input_user_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ui_register_input_account_tip"
        android:inputType="phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_register_label_password" />

    <EditText
        android:id="@+id/register_input_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ui_register_input_password_tip"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui_register_btn" />

</LinearLayout>